update all responses